# smc-integrator

./: .gitignore  README.md  pyproject.toml  tst.sql
marketing_cloud/: api.py  datatypes.py
smc/: api.py
src/: api.py
